Implemented basic ZNO SSO
