# api/generated.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package api
 
 import (
@@ -40,6 +40,9 @@ type ServerInterface interface {
 
 	// (PUT /internal/customer/{customerID}/task/{taskID})
 	TaskUpdate(ctx echo.Context, customerID int, taskID string) error
+
+	// (GET /internal/zno/sso)
+	GetZnoSsoInfo(ctx echo.Context, params GetZnoSsoInfoParams) error
 
 	// (GET /private)
 	CheckSession(ctx echo.Context) error
@@ -263,6 +266,26 @@ func (w *ServerInterfaceWrapper) TaskUpdate(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshalled arguments
 	err = w.Handler.TaskUpdate(ctx, customerID, taskID)
+	return err
+}
+
+// GetZnoSsoInfo converts echo context to params.
+func (w *ServerInterfaceWrapper) GetZnoSsoInfo(ctx echo.Context) error {
+	var err error
+
+	ctx.Set(BearerAuthScopes, []string{""})
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetZnoSsoInfoParams
+	// ------------- Required query parameter "bsn" -------------
+
+	err = runtime.BindQueryParameter("form", true, true, "bsn", ctx.QueryParams(), &params.Bsn)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter bsn: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.GetZnoSsoInfo(ctx, params)
 	return err
 }
 
@@ -797,6 +820,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/customers", wrapper.ListCustomers)
 	router.POST(baseURL+"/external/transfer/notify/:taskID", wrapper.NotifyTransferUpdate)
 	router.PUT(baseURL+"/internal/customer/:customerID/task/:taskID", wrapper.TaskUpdate)
+	router.GET(baseURL+"/internal/zno/sso", wrapper.GetZnoSsoInfo)
 	router.GET(baseURL+"/private", wrapper.CheckSession)
 	router.GET(baseURL+"/private/customer", wrapper.GetCustomer)
 	router.POST(baseURL+"/private/dossier", wrapper.CreateDossier)
