# domain/types/generated_types.go
@@ -1,6 +1,6 @@
 // Package types provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package types
 
 import (
@@ -409,11 +409,23 @@ type TransferRequest struct {
 	TransferDate *openapi_types.Date `json:"transferDate,omitempty"`
 }
 
+// Information required to connect to the ZNO SSO
+type ZnoSsoInfo struct {
+	Jwt string `json:"jwt"`
+	Url string `json:"url"`
+}
+
 // SetCustomerJSONBody defines parameters for SetCustomer.
 type SetCustomerJSONBody Customer
 
 // AuthenticateWithPasswordJSONBody defines parameters for AuthenticateWithPassword.
 type AuthenticateWithPasswordJSONBody PasswordAuthenticateRequest
+
+// GetZnoSsoInfoParams defines parameters for GetZnoSsoInfo.
+type GetZnoSsoInfoParams struct {
+	// BSN of the patient
+	Bsn string `json:"bsn"`
+}
 
 // CreateDossierJSONBody defines parameters for CreateDossier.
 type CreateDossierJSONBody CreateDossierRequest
